discussion/kv_engine/184675/184675_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: Add setHistoryRetentionBytes to KVStore

Implemented only in magma-kvstore.cc and calls through to
SetHistoryRetentionBytes

Change-Id: I597f444add833c77180ae4bb07ce7ee94a788530

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-16 15:59:43.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-16 16:00:09.000000000
Message: 
Patch Set 4: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/332664/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-16 16:13:11.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/820/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2884:18: error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
    case Status::RangeNotFound:
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30: error: unknown type name "Mode" [clang-diagnostic-error]
                             Mode mode) override;
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/820/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2884:18:
error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/820/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/995/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-memory-tracking-proxy.h(53): error C2061: syntax error: identifier "Mode" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/995/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/791/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/791/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1108/ : FAILURE

Compile error at [2023-01-16T16:02:49.651Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1108/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/840/ : FAILURE

Compile error at [2023-01-16T16:12:12.334Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/840/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/826/ : FAILURE

Compile error at [2023-01-16T16:02:08.041Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: ?Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/826/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/831/ : FAILURE

Compile error at [2023-01-16T16:06:56.573Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: ?Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/831/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/841/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Missing stat:  ep_magma_value_separation_size from stat group 
[2023-01-16T16:11:46.700Z] Missing stat:  ep_magma_value_separation_size from stat group config
[2023-01-16T16:11:46.700Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7880 Test failed: `stats error" (missing stats)
[2023-01-16T16:11:46.700Z] (24 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/841/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/832/ : FAILURE

Compile error at [2023-01-16T16:11:54.944Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/832/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/812/ : FAILURE

Compile error at [2023-01-16T16:05:59.181Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/812/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22200/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
